# F1StatsProvider

./: .gitignore  Dockerfile  Playground.ipynb  base_practice_results_2024.json  base_quali_results_2024.json  base_race_results_2024.json  base_sprint_quali_results_2024.json  drivers.json  kek.ipynb  migrations.sql  practice_results_2024.json  profile.csv  pyproject.toml  quali_laps_2024.json  quali_results_2024.json  race_results_2024.json  sprint_laps_2024.json  sprint_quali_results_2024.json  sprint_results_2024.json  weather_measurements_2024.json
Migrations/: EventFormats.migration.sql  SessionTypes.migration.sql
f1data/: main.py
f1data/core/models/: queries.py
f1data/core/serializers/: timedelta.py
f1data/models/event/: scheduled_event.py
f1data/models/laps/: Identifier.py
f1data/models/session/: ClassificationStatus.py
f1data/routers/: event.py  laps.py  monitoring.py  session_laps.py  session_results.py
f1data/services/background_tasks/: load_session.py
f1data/services/data_transformation/: core.py  integers.py  laptime.py  speed.py
f1data/services/event_schedule/: event.py  models.py
f1data/services/laps/: loader.py  resolver.py
f1data/services/laps_data/: laps.py  model.py  resolver.py
f1data/services/prefetcher/: load_recent.py
f1data/services/results/: resolver.py
f1data/utils/: Retry.py  get_driver_color.py  retry.py  transformers.py
scripts/: db_population.py
scripts/db_population/: connection.py  drivers.py  events.py  laps.py  results.py  teams.py  telemetry.py
src/: main.py
src/routers/: laps.py  telemetry.py
(+25 files in other folders)
