[tool.poetry]
name = "f1data"
version = "0.1.0"
description = ""
authors = ["German <thewhitehaven04@gmail.com>"]

[tool.poetry.group.dev.dependencies]
uvicorn = "0.31.1"
ipykernel = "^6.29.5"


[tool.poetry.dependencies]
python = "~3.11"
fastf1 = "3.4.0"
fastapi = "0.112"
pydantic = "2.9.2"
apscheduler = "3.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
