[tool.poetry]
name = "f1data"
version = "0.1.0"
description = ""
authors = ["German <thewhitehaven04@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.11"
fastf1 = "3.5.0"
fastapi = {extras = ["hypercorn"], version = "^0.115.7"}
pydantic = "2.9.2"
hypercorn = "^0.17.3"
pycountry = "^24.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
